--- a/src/app/partenaires/partenaires.component.html
+++ b/src/app/partenaires/partenaires.component.html
@@ -1,4 +1,4 @@
 
 <p>
-  Les partenaires de Fagne Finances sont : CRELAN, AXA, Baloise, AG Insurance, DAS, Allianz, Aedes et NN !
+  Les partenaires de Fagne Finances sont : CRELAN, AXA, Baloise, AG Insurance, DAS, Allianz, Aedes et NN ! genila
 </p>
